RESOLVED FIXED197630
Prewarmed WebContent processes never app nap
https://bugs.webkit.org/show_bug.cgi?id=197630
Summary Prewarmed WebContent processes never app nap
Chris Dumez
Reported 2019-05-06 15:12:03 PDT
Prewarmed WebContent processes never app nap.
Attachments
Patch (2.94 KB, patch)
2019-05-06 15:13 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-05-06 15:13:38 PDT
Geoffrey Garen
Comment 2 2019-05-06 15:17:44 PDT
Comment on attachment 369173 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-05-06 15:47:31 PDT
Comment on attachment 369173 [details] Patch Clearing flags on attachment: 369173 Committed r244984: <https://trac.webkit.org/changeset/244984>
WebKit Commit Bot
Comment 4 2019-05-06 15:47:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-05-06 15:48:15 PDT
Note You need to log in before you can comment on or make changes to this bug.