Prewarmed WebContent processes never app nap https://bugs.webkit.org/show_bug.cgi?id=197630

Reviewed by Geoffrey Garen.

Do not require actually having a WebPage in the WebContent process to App Nap.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateThrottleState):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/211769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244984 268f45cc-cd09-0410-ab3c-d52691b4dbfc